--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "Keyboard Transliterator",
-  "description": "Converts Latin keystrokes to Devanagari script in real-time",
+  "name": "Advanced Keyboard Transliterator",
+  "description": "Converts Latin keystrokes to Devanagari script with support for multi-character mappings",
   "version": "1.0",
   "permissions": [
     "storage"
